# actions-git-info

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
git_info/: cli.py
